clusters/my-cluster/myshop/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myshop-stable
  annotations:
    kubernetes.io/ingress.class: nginx
    # Enable the sticky session in the Kubernetes Ingress resource
    nginx.ingress.kubernetes.io/affinity: "cookie"
    # Specify the name of the required cookie (default: INGRESSCOOKIE).
    nginx.ingress.kubernetes.io/session-cookie-name: "returnflow-testing"
    # Specify the time before the cookie expires (in seconds):
    nginx.ingress.kubernetes.io/session-cookie-max-age: "3600" # 1h
spec:
  rules:
  - host: myshop.local
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: myshop-stable
            port:
              number: 80
